--- a/table.html
+++ b/table.html
@@ -17,7 +17,7 @@ th{background:#222}
 <tbody id="table"></tbody>
 </table>
 <script>
-const PASSWORD = 'tmj2025';
+const PASSWORD = 'TMJ2026';
 const pass = prompt('Mot de passe requis :');
 if(pass !== PASSWORD){ alert('Accès refusé'); history.back(); }
 const maisons = JSON.parse(localStorage.getItem('famillesTMJ')) || [];
